--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
         <section id="section2-alter" class="encuesta-container flex-column">
             <p id="encuesta2-pregunta" class="encuesta-pregunta encuesta2-pregunta"></p>
 
-            <div id="usuarios" class="flex-row">
+            <div id="usuarios" class="grid"></div>
 
-            </div>
             <div class="input-actions flex-row">
                 <p class="input-action pointer material-icons" onclick="VotarEncuesta()">how_to_vote</p>
             </div>
